--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
   // var AUTO_TITLE = true;
   // var S3_REGION = 's3'; // for us-east-1
 </script>
-<script type="text/javascript" src="https://rawgit.com/rufuspollock/s3-bucket-listing/gh-pages/list.js"></script>
+<script type="text/javascript" src="/list.js"></script>
 </body>
 </html>
